<resources>
    <string name="app_name">CardPayment</string>
    <string name="price">Price:</string>
    <string name="mobilise">Mobilise</string>
    <string name="company">Company:</string>
    <string name="card_number">Card Number</string>
    <string name="holder_name">Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="save_this_card">Save this card</string>
</resources>